<resources>
    <string name="ridecanceled">The ride was canceled by the driver!</string>
    <string name="changedpass">you have changed the password successfully!</string>
    <string name="confirmlang">you have to restart the application to apply changes!</string>
    <string name="loading">loading..</string>
    <string name="english">english</string>
    <string name="arabic">العربية</string>
    <string name="french">francais</string>
    <string name="settings">Settings</string>
    <string name="changepass">Change password</string>
    <string name="title_activity_settings">Settings</string>
    <string name="account">Account</string>
    <string name="language">Language</string>
    <string name="notifications">Notifications</string>
    <string name="bcancel">Cancel</string>
    <string name="save">Save</string>
    <string name="payment">Payment : </string>
    <string name="credit">Credit</string>
    <string name="duration">ride duration</string>
    <string name="minimum">Le coût minimum est </string>
    <string name="currentpass">old password</string>
    <string name="begined">The ride started!</string>
    <string name="newpass">new password</string>
    <string name="retypenewpass">retype new password</string>
    <string name="wrong">wrong password</string>
    <string name="same">You must enter the same password</string>
    <string name="change">change</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">8c356c5f684c0503ced8b041f049d74f</string>
    <string name="addtofavorite">Add to favorite</string>
    <string name="nogps">gps is disabled,you have to enable it</string>
    <string name="noconnection">there is no network connection</string>
    <string name="facebook_app_id" translatable="false">553238991677443</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb553238991677443</string>
    <string name="online">ONLINE</string>
    <string name="offline">OFFLINE</string>
    <string name="or">or</string>
    <string name="end">END</string>
    <string name="sendpass">your tewsila password is :</string>
    <string name="matricule">Registration number</string>
    <string name="begin">BEGIN </string>
    <string name="passwordrecovery">Password Recovery</string>
    <string name="addnewrequest">Add new request</string>
    <string name="warning">Do you want to cancel?</string>
    <string name="twarning">Warning</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="creating">Creating account</string>
    <string name="numberused">This number/email is already in use , enter a different one !</string>
    <string name="numberused2">This number is already in use , enter a different one !</string>
    <string name="emailused">This email is already in use , enter a different one !</string>
    <string name="registrationnumber">Car registration number</string>
    <string name="car">Car informations</string>
    <string name="success">you have successfully created an account , you can login now ! </string>
    <string name="recover">Recover password</string>
    <string name="smssent">SMS sent</string>
    <string name="send">Send</string>
    <string name="emailsent">Please check your e-mail</string>
    <string name="sending">Sending email..</string>
    <string name="sendingreport">Sending report..</string>
    <string name="noemail">We did not find your account, please try again</string>
    <string name="verification2">Verification code</string>
    <string name="arrivingtime">Arrival time </string>
    <string name="bconfirm">"confirm"</string>
    <string name="resendsms">"resend"</string>
    <string name="notyet">"if you didn't receive sms yet , please contact us at support@tewsila.com" </string>
    <string name="confirm">confirm</string>
    <string name="new_version">a new version is available , you can download it now</string>
    <string name="promosuccess">you have  a reduction of </string>
    <string name="validate">validate</string>
    <string name="completed">completed</string>
    <string name="canceled">canceled</string>
    <string name="favorite">favorite</string>
    <string name="ridestitle">Rides</string>
    <string name="wrongcode">Wrong code</string>
    <string name="loginfailed">Login Failed</string>
    <string name="sorry">sorry , we could not find a driver currently</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="taxiname">Name :</string>
    <string name="ok">OK</string>
    <string name="taxiphone">Phone number</string>
    <string name="signing">signing in.. </string>
    <string name="carmodel">Car model :</string>
    <string name="rating">rating :</string>
    <string name="email">Email</string>
    <string name="familyname">FamilyName</string>
    <string name="firstname">FirstName</string>
    <string name="gender">Gender</string>
    <string name="calldriver">Call</string>
    <string name="arrivedmessage">your driver arrived </string>
    <string name="male">male</string>
   <string name="prebook">Book later</string>
    <string name="forgetrating">you must give a rating</string>
    <string name="terms">terms and conditions</string>
    <string name="termslink">www.link.com</string>
    <string name="accept_terms">Accept</string>
    <string name="soon">Coming soon</string>
    <string name="soon_mes">this service is not available now .</string>
    <string name="endtrip">The ride has ended</string>
    <string name="contactus">Contact us</string>
    <string name="sendemail">Send email..</string>
    <string name="female">female</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Tewsila</string>
    <string name="alarm">"15 minutes before the beginning of the ride.\n be ready!"</string>
    <string name="alarm30">"30 minutes before the beginning of the ride.\n be ready!"</string>
    <string name="alarm3">" beginning of the ride.\n be ready!"</string>
    <string name="late">" At least an hour from now!"</string>
    <string name="prebooksuccess">"Ride successfully scheduled. Be ready on "</string>
    <string name="reportsuccess">" report successfully submitted."</string>
    <string name="estimatedcost">estimated price</string>
    <string name="servicetax">Service tax</string>
    <string name="estimatedtime">estimated time</string>
    <string name="totalprice">Total price</string>
    <string name="rideprice">price</string>
    <string name="ridetime">duration</string>
    <string name="search">search</string>
    <string name="driverdis">the driver is offline</string>
    <string name="wantlogout">Do you want to logout?</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_about">about</string>
    <string name="menu_legalnotices">legalnotices</string>
    <string name="zipi">zipi</string>
    <string name="sign_in">Log in</string>
    <string name="createaccount">CREATE NEW ACCOUNT</string>
    <string name="login_password">Password</string>
    <string name="login_username">Username</string>
    <string name="register_here">Register Here</string>
    <string name="register_name">first Name</string>
    <string name="register_username">family Name</string>
    <string name="register_password">Password</string>
    <string name="register_age">Age</string>
    <string name="selectpic">Select picture</string>
    <string name="camera">Camera</string>
    <string name="galery">Gallery</string>
    <string name="birthdate">Birth date</string>
    <string name="register_button">Sign Up</string>
    <string name="picture">choose a picture</string>
    <string name="logout">Logout</string>
    <string name="title_activity_register">Sign Up</string>
    <string name="title_activity_request">Request a ride</string>
    <string name="title_activity_login">login</string>
    <string name="settime">Set time</string>
    <string name="setdate">Set date</string>
    <string name="kind">kind</string>
    <string name="more2">"if you didn't receive an email, please contact us at Support@tewsila.com"</string>
    <string name="more">"you can't change password more than 3 times!"</string>
    <string name="verification">Verification</string>
    <string name="model">model</string>
    <string name="phone">Phone</string>
    <string name="next">next</string>
    <string name="mode">Mode</string>
    <string name="bregister">Sign Up</string>
    <string name="kindy">kind :</string>
    <string name="search_hint">search</string>
    <string name="app_label">search</string>
    <string name="pickup_location">Pickup location</string>
    <string name="choose_car_seats">choose car seats</string>
    <string name="car_seats">car seats</string>
    <string name="cancelrequest">CANCEL REQUEST</string>
    <string name="alreadyboarded">Already arrived</string>
    <string name="request">request </string>
    <string name="forgetpass">Forgotten password? </string>
    <string name="caroptions">car seats</string>
    <string name="request_taxi">Book now </string>
    <string name="Login">Login</string>
    <string name="looking">\n Looking for a \n Taxi driver ...  </string>
    <string name="cancel">cancel request </string>
    <string name="Registertitle">Register </string>
    <string name="Logintitle">Login </string>
    <string name="Requesttitle">Request Taxi </string>
    <string name="requests">Requests </string>
    <string name="assignedtitle">Taxi assigned </string>
    <string name="name">Name</string>
    <string name="share">Invite a friend</string>
    <string name="share_text">Hey ,need a ride ? try out tewsila:</string>
    <string name="become_driver">Become a driver</string>
    <string name="sure">Do you really want to cancel?</string>
    <string name="pickuplocation">Pickup location</string>
    <string name="destination">Destination</string>
    <string name="pickup">Pickup</string>
    <string name="close">close</string>
    <string name="smscode">Tewsila: Your verification code is:</string>
    <string name="retry">retry</string>
    <string name="error">an error occurred</string>
    <string name="edit">Edit</string>
    <string name="allowed">You are allowed only one request!</string>
    <string name="driverranking">Driver ranking</string>
    <string name="ratedriver">Rate this driver</string>
    <string name="register">Sign up</string>
    <string name="done">Done</string>
    <string name="sms">Account verification </string>
    <string name="sms2">Please insert the code received by SMS</string>
    <string name="showrequests">Show requests</string>
    <string name="seats">seats</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="problem">Write your problem below</string>
    <string name="accepted">Your request is accepted ! </string>
    <string name="reportactivity">Report a problem</string>
    <string name="select_mode">Please select the type</string>
    <string name="selectpd">please select pickup and destination</string>
    <string name="atleast">at least 3 characters</string>
    <string name="valideemail">Enter a valid email address</string>
    <string name="validenumber">Enter Valid Mobile Number</string>
    <string name="between">minimum 6 characters</string>
    <string name="economy">Economy</string>
    <string name="vip">V.I.P</string>
    <string name="newrequesttp">new Request ( prebook )</string>
    <string name="newrequestt">new Request</string>
    <string name="newrequest">You have created a new request!</string>
    <string name="timeanddate">Time and date</string>
    <string name="havearide">You should get a ride to be able to report a problem!</string>
    <string name="comment">write your comment</string>
    <string name="drawer_open">Open navigation drawer</string>
        <string name="drawer_close">Close navigation drawer</string>
</resources>