<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <AutoCompleteTextView
            android:id="@+id/editText12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText11"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="60dp"
            android:ems="10"
            android:hint="@string/destination"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:maxLines="2"
            android:textColor="@android:color/black" />

        <AutoCompleteTextView
            android:id="@+id/editText11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/pickup"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:maxLines="2"
            android:textColor="@android:color/black" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/button25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/toggleButton"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="100dp"
            android:clickable="true"
            app:backgroundTint="#3c7cf0"
            app:fabSize="normal"
            app:srcCompat="@drawable/next" />

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText12"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="44dp"
            android:checked="false"
            android:textOff="@string/economy"
            android:textOn="@string/vip" />
    </RelativeLayout>

</RelativeLayout>